--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="purple_200">#B39DDB</color>
     <color name="purple_500">#673AB7</color>
     <color name="purple_700">#512DA8</color>
-    <color name="teal_200">#CE93D8</color>
+    <color name="teal_200">#B39DDB</color>
     <color name="teal_700">#7B1FA2</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="alarmColor">#FFAB91</color>
 </resources>
