--- a/app/src/main/res/layout/activity_fullscreen_alarm.xml
+++ b/app/src/main/res/layout/activity_fullscreen_alarm.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FullscreenAlarm"
+    tools:context=".ui.fullscreenalarm.FullscreenAlarm"
     android:background="@drawable/gradient">
 
 
