--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="teal_700">#7B1FA2</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="alarmColor">#FFAB91</color>
+    <color name="alarmColor">#F3E5F5</color>
 </resources>
