--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,13 +11,16 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="colorSurface">@color/black</item>
+        <item name="android:colorBackground">@color/black</item>
+<!--        <item name="android:windowBackground">@color/black</item>-->
         <!-- Customize your theme here. -->
     </style>
 
     <style name="alarm_title">
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@android:color/holo_orange_light</item>
+<!--        <item name="android:background">@android:color/holo_orange_light</item>-->
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 </resources>
