--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
     <style name="alarm_title">
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@color/alarmColor</item>
+<!--        <item name="android:background">@color/alarmColor</item>-->
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 </resources>
